--- a/src/app/main/components/profile/profile.component.css
+++ b/src/app/main/components/profile/profile.component.css
@@ -11,18 +11,11 @@
   display: flex;
   margin: 20px auto;
   justify-content: center;
+  max-width: 970px;
 }
 
-.user-info {
-  display: flex;
-}
-
-.info-container {
-  display: flex;
-  flex-direction: column;
-  margin-right: 20px;
-  margin-left: 20px;
-  width: 150px;
+.user-avatar-container {
+  margin-right: 40px;
 }
 
 .user-username {
@@ -36,29 +29,37 @@
 }
 
 .user-bio {
-  font-size: 16px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  word-wrap: break-word;
+  margin-top: 25px;
+  margin-bottom: initial;
 }
 
 .user-avatar {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
 }
 
+.control-container {
+  max-width: 500px;
+}
+
 .subscribe-buttons-container {
-  margin-top: 15px;
+  margin-top: 20px;
+}
+
+.subscribe-button {
+  margin-left: 10px;
 }
 
 .subscribe-container {
   display: flex;
-  margin-top: 5px;
+  margin-top: 12px;
+  margin-left: -8px;
 }
 
 .subscribe-count {
   font-weight: bold;
+  vertical-align: initial;
 }
 
 .error-message {
