--- a/src/app/main/components/search/search.component.html
+++ b/src/app/main/components/search/search.component.html
@@ -1,5 +1,5 @@
 <form>
-  <mat-form-field>
+  <mat-form-field class="search-input">
     <label>
       <input matInput type="text" [formControl]="searchForm" placeholder="Search" [matAutocomplete]="auto">
     </label>
