--- a/src/app/main/components/nav/nav.component.html
+++ b/src/app/main/components/nav/nav.component.html
@@ -1,6 +1,14 @@
 <div class="nav-container">
-  <img src="../../../../assets/images/home.png" class="nav-profile-icon" [routerLink]="[ '' ]" alt="home">
-  <app-search class="search-input"></app-search>
-  <img src="../../../../assets/images/add-photo.png" class="nav-profile-icon" [routerLink]="[ '/post-create' ]" alt="add-photo">
-  <img src="../../../../assets/images/profile.png" class="nav-profile-icon" [routerLink]="[ '/user-profile/', authorizedUser ]" alt="profile">
+  <div class="icons-container">
+    <a class="icon-container" [routerLink]="[ '' ]">
+      <img src="../../../../assets/images/margatsni-small-logo.png" class="nav-main-icon" alt="margatsni">
+    </a>
+    <app-search class="search-input"></app-search>
+    <a class="icon-container" [routerLink]="[ '/post-create' ]">
+      <img src="../../../../assets/images/add-photo.png" class="nav-icon" alt="add-photo">
+    </a>
+    <a class="icon-container" [routerLink]="[ '/user-profile/', authorizedUser ]">
+      <img src="../../../../assets/images/profile.png" class="nav-icon" alt="profile">
+    </a>
+  </div>
 </div>
