--- a/src/app/main/components/profile/profile.component.html
+++ b/src/app/main/components/profile/profile.component.html
@@ -3,18 +3,15 @@
 <div class="profile-container" *ngIf="!spinner">
 
   <div class="profile-info-container">
-    <div class="user-info">
+    <div class="user-avatar-container">
       <img *ngIf="!errorMessage" class="user-avatar" src="{{userAvatar}}" alt="userAvatar">
-      <div class="info-container">
-        <p class="user-username">{{username}}</p>
-        <p class="user-bio">{{bio}}</p>
-      </div>
     </div>
 
-    <div *ngIf="!errorMessage">
+    <div class="control-container" *ngIf="!errorMessage">
       <div class="subscribe-buttons-container">
-        <button mat-raised-button color="primary" *ngIf="subscribeStatus" (click)="subscribe(userId)">Subscribe</button>
-        <button mat-stroked-button *ngIf="!subscribeStatus" (click)="unsubscribe(userId)">UnSubscribe</button>
+        <span class="user-username">{{username}}</span>
+        <button class="subscribe-button" mat-raised-button color="primary" *ngIf="subscribeStatus" (click)="subscribe(userId)">Subscribe</button>
+        <button class="subscribe-button" mat-stroked-button *ngIf="!subscribeStatus" (click)="unsubscribe(userId)">UnSubscribe</button>
       </div>
 
       <div class="subscribe-container">
@@ -32,6 +29,8 @@
           </button>
         </div>
       </div>
+
+      <p class="user-bio">{{bio}}</p>
     </div>
   </div>
 
