--- a/src/app/main/components/search/search.component.css
+++ b/src/app/main/components/search/search.component.css
@@ -14,3 +14,9 @@
   display: flex;
   justify-content: center;
 }
+
+@media screen and (max-width: 600px) {
+  .search-input {
+    width: 55px;
+  }
+}
