--- a/src/app/main/components/following/following.component.css
+++ b/src/app/main/components/following/following.component.css
@@ -6,6 +6,10 @@
   margin: auto;
 }
 
+.title {
+  text-align: center;
+}
+
 .follow-container {
   display: flex;
   justify-content: space-between;
