--- a/src/app/main/components/user-profile-edit/user-profile-edit.component.css
+++ b/src/app/main/components/user-profile-edit/user-profile-edit.component.css
@@ -7,29 +7,72 @@
   margin: auto;
 }
 
+.user-username {
+  font-weight: bold;
+}
+
 .profile-edit-container {
   background-color: #ffff;
   margin: 20px auto;
   border: 1px #C0C0C0 solid;
+  width: 400px;
 }
 
 .profile-edit-username {
   text-align: center;
+  font-weight: bold;
 }
 
 .profile-edit-form-container {
   margin: 10px;
 }
 
-.user-avatar {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
+.user-avatar-container {
+  display: flex;
+  flex-direction: column;
 }
 
-@media screen and (min-width: 576px) {
+.user-avatar {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
+.input-image-button {
+  max-width: 200px;
+  margin: 10px auto;
+}
+
+.input-container {
+  display: flex;
+}
+
+.field-container {
+  display: flex;
+  justify-content: flex-end;
+  width: 80px;
+}
+
+.input {
+  margin-left: 10px;
+}
+
+.submit-button-container {
+  display: flex;
+}
+
+.submit-button {
+  margin: 0 auto;
+}
+
+.error-message {
+  text-align: center;
+}
+
+@media screen and (max-width: 576px) {
   .profile-edit-container {
-    width: 550px;
+    width: 310px;
   }
 }
 
