add not found component and some styles fixes

--- a/src/app/auth/non-found/non-found.component.html
+++ b/src/app/auth/non-found/non-found.component.html
@@ -1,3 +1,8 @@
-<p>
-  non-found works!
-</p>
+<div class="not-found-container">
+  <p class="not-found-message">
+    Oops! Resource not found
+  </p>
+  <a class="icon-container" [routerLink]="[ '' ]">
+    <img src="../../../assets/images/margatsni-small-logo.png" class="nav-main-icon" alt="margatsni">
+  </a>
+</div>
