--- a/src/app/main/components/followers/followers.component.css
+++ b/src/app/main/components/followers/followers.component.css
@@ -24,9 +24,10 @@
 .user-avatar {
   width: 40px;
   height: 40px;
-  vertical-align: middle;
   margin-right: 8px;
   border-radius: 50%;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .subscribe-button {
