--- a/src/app/main/components/profile/profile.component.css
+++ b/src/app/main/components/profile/profile.component.css
@@ -26,6 +26,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   word-wrap: break-word;
+  margin-right: 10px;
 }
 
 .user-bio {
@@ -47,15 +48,15 @@
 
 .subscribe-buttons-container {
   margin-top: 20px;
+  margin-bottom: 12px;
 }
 
 .subscribe-button {
-  margin-left: 10px;
+  width: 112px;
 }
 
 .subscribe-container {
   display: flex;
-  margin-top: 12px;
   margin-left: -8px;
 }
 
