--- a/src/app/main/components/profile/profile.component.css
+++ b/src/app/main/components/profile/profile.component.css
@@ -21,8 +21,7 @@
 .user-username {
   font-weight: bold;
   font-size: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  font-family: arial, sans-serif;
   overflow: hidden;
   text-overflow: ellipsis;
   word-wrap: break-word;
