--- a/src/app/main/components/user-profile/user-profile.component.html
+++ b/src/app/main/components/user-profile/user-profile.component.html
@@ -37,8 +37,7 @@
   <div class="post-container">
     <div class="post"
          [ngStyle]="{'background-image': 'url(' + post.image + ')'}"
-         (click)="editPost(post.id)"
-         [routerLink]="[ '/edit-post', post.id ]"
+         [routerLink]="[ '/post-review', post.id ]"
          *ngFor="let post of posts">
     </div>
   </div>
