--- a/src/app/main/components/user-profile/user-profile.component.html
+++ b/src/app/main/components/user-profile/user-profile.component.html
@@ -11,7 +11,7 @@
       <div class="settings-container">
         <span class="user-username">{{username}}</span>
         <button class="settings-button" mat-raised-button [routerLink]="[ '/edit-profile' ]">Edit profile</button>
-        <button class="settings-button" mat-raised-button (click)="logout()">logout</button>
+        <button class="settings-button" mat-raised-button (click)="logout()">Logout</button>
       </div>
 
       <div class="subscribe-container">
