add textarea rows 1 on edit component

--- a/src/app/main/components/user-profile-edit/user-profile-edit.component.html
+++ b/src/app/main/components/user-profile-edit/user-profile-edit.component.html
@@ -48,7 +48,7 @@
       </div>
         <mat-form-field class="input">
         <label>
-          <textarea matInput formControlName="bio" value="{{bio}}"></textarea>
+          <textarea rows="1" matInput formControlName="bio" value="{{bio}}"></textarea>
         </label>
       </mat-form-field>
     </div>
