--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -23,12 +23,12 @@
           <input type="password" matInput formControlName="password" placeholder="Enter password">
         </label>
       </mat-form-field>
-      <mat-error *ngIf="registrationForm.get('password').invalid && registrationForm.get('password').touched">Password can't be empty!</mat-error>
+      <mat-error *ngIf="registrationForm.get('password').invalid && registrationForm.get('password').touched">Create a password at least 6 characters long.</mat-error>
         <mat-form-field class="input">
           <label>
             <input type="password" matInput formControlName="passwordConfirm" placeholder="Confirm password">
           </label>
-      </mat-form-field>
+        </mat-form-field>
       <mat-error *ngIf="registrationForm.hasError('passwordError') && registrationForm.get('passwordConfirm').touched">Passwords do not match</mat-error>
       <mat-error *ngIf="registrationError">{{registrationError}}</mat-error>
     </form>
