--- a/src/app/auth/registration/registration.component.html
+++ b/src/app/auth/registration/registration.component.html
@@ -10,7 +10,8 @@
           <input matInput formControlName="username" placeholder="Enter username:">
         </label>
         <mat-error *ngIf="!registrationForm.get('username').value && registrationForm.get('username').touched">Username can't be empty!</mat-error>
-        <mat-error *ngIf="registrationForm.get('username').invalid && registrationForm.get('username').value">Enter please correct username!</mat-error>
+        <mat-error *ngIf="registrationForm.get('username').hasError('pattern') && registrationForm.get('username').value">Enter please correct username!</mat-error>
+        <mat-error *ngIf="registrationForm.get('username').hasError('maxlength') && registrationForm.get('username').value">Username must be at the most 20 characters long</mat-error>
       </mat-form-field>
       <mat-form-field class="input">
         <label>
