--- a/src/app/main/components/user-profile/user-profile.component.css
+++ b/src/app/main/components/user-profile/user-profile.component.css
@@ -101,6 +101,17 @@
   margin: 50px auto;
 }
 
+@media screen and (max-width: 350px) {
+  .user-profile-info-container {
+    justify-content: initial;
+  }
+
+  .user-avatar-container {
+    margin-left: 20px;
+    margin-right: 5px;
+  }
+}
+
 @media screen and (max-width: 600px) {
 
   .control-container {
@@ -113,7 +124,13 @@
     margin: 5px auto;
   }
 
+  .user-avatar {
+    width: 100px;
+    height: 100px;
+  }
+
   .user-avatar-container {
+    margin-left: 5px;
     margin-right: 5px;
   }
 
