--- a/src/app/main/components/post-review/post-review.component.css
+++ b/src/app/main/components/post-review/post-review.component.css
@@ -22,6 +22,7 @@
   font-size: 17px;
   font-weight: bold;
   cursor: pointer;
+  outline: none;
   margin-top: 10px;
 }
 
@@ -29,6 +30,7 @@
 .post-owner {
   font-weight: bold;
   cursor: pointer;
+  outline: none;
 }
 
 .likes-container {
@@ -52,6 +54,7 @@
   height: 24px;
   margin-left: 10px;
   cursor: pointer;
+  outline: none;
 }
 
 .comment-likes-container {
@@ -65,6 +68,7 @@
   margin-left: 10px;
   vertical-align: middle;
   cursor: pointer;
+  outline: none;
 }
 
 .post-info-container {
@@ -110,14 +114,13 @@
 .comment-owner {
   font-weight: bold;
   cursor: pointer;
-  max-width: 100px;
-  word-wrap: break-word;
+  outline: none;
 }
 
 .comment-body {
   margin-left: 10px;
   text-align: left;
-  max-width: 225px;
+  width: 130px;
   text-overflow: ellipsis;
   word-wrap: break-word;
 }
@@ -125,11 +128,14 @@
 .edit-comment {
   width: 120px;
   margin-left: 10px;
+  margin-right: 10px;
   margin-top: -5px;
 }
 
 .comments-buttons {
   display: flex;
+  justify-content: flex-end;
+  width: 185px;
 }
 
 .comments-buttons-container {
@@ -159,9 +165,9 @@
   }
 
   .edit-comment {
-    max-width: 75px;
     margin-left: initial;
     margin-top: -5px;
+    width: 150px;
   }
 
   .comments-buttons {
@@ -181,5 +187,17 @@
 
   .post-comments-info-container {
     flex-direction: column;
+  }
+
+  .comment-likes-container {
+    justify-content: flex-end;
+  }
+
+  .comments-edit-buttons {
+    justify-content: flex-end;
+  }
+
+  .comment-action-icon {
+    justify-content: flex-end;
   }
 }
