--- a/src/app/main/components/tag/tag.component.css
+++ b/src/app/main/components/tag/tag.component.css
@@ -25,6 +25,7 @@
   background-repeat: no-repeat;
   background-position: 50% 50%;
   cursor: pointer;
+  outline: none;
   background-color: #fff;
   border: 1px solid #808080;
 }
