--- a/src/app/main/components/user-profile/user-profile.component.css
+++ b/src/app/main/components/user-profile/user-profile.component.css
@@ -83,6 +83,7 @@
   background-repeat: no-repeat;
   background-position: 50% 50%;
   cursor: pointer;
+  outline: none;
   background-color: #fff;
   border: 1px solid #808080;
 }
