--- a/src/app/main/components/user-profile/user-profile.component.css
+++ b/src/app/main/components/user-profile/user-profile.component.css
@@ -103,14 +103,14 @@
 }
 
 @media screen and (max-width: 350px) {
-  .user-profile-info-container {
-    justify-content: initial;
-  }
-
-  .user-avatar-container {
-    margin-left: 20px;
-    margin-right: 5px;
-  }
+  /*.user-profile-info-container {*/
+  /*  justify-content: initial;*/
+  /*}*/
+  /**/
+  /*.user-avatar-container {*/
+  /*  margin-left: 20px;*/
+  /*  margin-right: 5px;*/
+  /*}*/
 }
 
 @media screen and (max-width: 600px) {
@@ -122,12 +122,7 @@
   }
 
   .user-username {
-    margin: 5px auto;
-  }
-
-  .user-avatar {
-    width: 100px;
-    height: 100px;
+    text-align: center;
   }
 
   .user-avatar-container {
